--- a/bios/templates/bios/project_list.html
+++ b/bios/templates/bios/project_list.html
@@ -9,7 +9,7 @@
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
-	<div class="modal-dialog">
+	<div class="modal-dialog modal-dialog-scrollable">
 	  <div class="modal-content">
 		<div class="modal-header">
 		  <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
