--- a/templates/base.html
+++ b/templates/base.html
@@ -110,10 +110,10 @@ NavItem{
           </div>
         </li> -->
         <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="">Home</a>
+          <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="">Initiatives</a>
+          <a class="nav-link" aria-current="page" href="{% url 'inphase:all' %}">Initiatives</a>
         </li>
         <li class="nav-item active NavItem mx-3">
           <a class="nav-link" aria-current="page" href="">Events</a>
