--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,176 @@
 {% extends "base.html" %}
 {% load static %}
 {% block css %}
-  <style>
-    .carousel-item {
-  height: 100vh;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+<style>
+  .carousel-item {
+    height: 100vh;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
-}
-.content{
-  text-align: center;
-  padding-top: 5%;
-  padding-right: 4%;
-  padding-left: 60%;
-  color: white;
-  
-}
-  </style>
-  
+  }
+
+  .content {
+    text-align: center;
+    padding-top: 5%;
+    padding-right: 4%;
+    padding-left: 60%;
+    color: white;
+
+  }
+
+  .carousel-item-content {
+    /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+    font-size: 24px;
+  }
+
+  .carousel-item-screen {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    padding: 15% 20% 0 15%;
+  }
+
+  .link-button{
+    text-decoration: none;
+    color: white;
+    background-color: #555555;
+    display: inline-block;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+  }
+
+  .link-button:hover{
+    text-decoration: none;
+    color: white;
+    background-color: #222222;
+    display: inline-block;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+  }
+</style>
+
 {% endblock %}
 {% block carousel %}
-    {% if user.is_authenticated %}
-    <br><br>
-        <div class="alert alert-success" style="padding-left: 40%;" role="alert">
-            WELCOME {{user.first_name}},<br>
-            You are now Logged in
-        </div>
-    {% endif %}
-    <div id="carouselExampleIndicators" class="carousel slide my-carousel
+{% if user.is_authenticated %}
+<br><br>
+<div class="alert alert-success" style="padding-left: 40%;" role="alert">
+  WELCOME {{user.first_name}},<br>
+  You are now Logged in
+</div>
+{% endif %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
     my-carousel" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0"
-        class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active" style="background-image:
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active" style="background-image:
         url('https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg'); opacity: 0.8;">
-        
-      </div>
-        <div class="carousel-item"style="background-image:
-          url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg')">
-  
+      <div class="carousel-item-screen">
+        <div class="carousel-item-content">
+          <h1><b>About <br> Cepstrum </b> </h1>
+          <br>
+          <p>
+            A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during
+            their stay here in campus, Cepstrum is the students' society of the department of Electronics and Electrical
+            Engineering, IIT Guwahati.
+          </p>
         </div>
-        <div class="carousel-item"data-interval="9000">
-          <video autoplay muted loop width="100%" height="130%" id="myVideo">
-            <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
-        </video>
-         
-        </div>
-      <div class="carousel-item"style="background-image:
-        url('/static/inphase/cover.png'); width: 100%">
+
 
       </div>
+
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators"
-      role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators"
-      role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>   
- 
+    <div class="carousel-item" style="background-image:
+          url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg')">
+
+      <div class="carousel-item-screen">
+        <div class="carousel-item-content">
+          <h1><b>About <br> Department </b> </h1>
+          <br>
+          <p>
+            Electronics and Electrical Engineering (EEE) deals with the learning of everything ranging from differebt electrical
+            machines to how our elevtrical system work and sustain. It includes the engineering problems, opportunities and needs
+            of electrical, electronics, computer, telecommunication systems and related industries. 
+          </p>
+        </div>
+
+
+      </div>
+
+
+    </div>
+
+    <div class="carousel-item" style="background-image:
+        url('/static/inphase/cover.png'); width: 100%">
+      <div class="carousel-item-screen">
+        <div class="carousel-item-content">
+          <h1><b>About <br> Inphase </b> </h1>
+          <br>
+          <p>
+            The world is changing very fast.", says Rupert Murdoch, "Big will not beat small anymore. It will be the fast
+            beating the slow." And surely it will be the more informed beating the lesser one, the most knowledge bearing person
+            getting ahead of the rest.
+            <br>
+            <br>
+            <a href="{% url 'inphase:all' %}" class="link-button">Know More</a>
+          </p>
+        </div>
+
+
+      </div>        
+
+    </div>
+
+    <div class="carousel-item" style="background-image:
+        url('/static/Paperman/Cover.jpg'); width: 100%">
+      <div class="carousel-item-screen">
+        <div class="carousel-item-content">
+          <h1><b>About <br> Paperman </b> </h1>
+          <br>
+          <p>
+            Not only the hero you need, but also the one you deserve! Paperman is one of its kind initiative by Cepstrum
+            with the sole aim of creating a repository of past question papers and study resources to aid your academic
+            needs. We have all the courses of first year and B.tech courses taught by Department of EEE covered.
+            <br>
+            <br>
+            <a href="{% url 'paperman:all' %}" class="link-button">Know More</a>
+          </p>
+        </div>
+
+
+      </div>        
+
+    </div>
+
+
+    <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 {% endblock %}
